# elohim

./: .gitignore  .gitmodules  ARCHITECTURAL_REVIEW_MEDIA_SCALE.md  ARCHITECTURE_BLOB_STREAMING_MULTIFRAMEWORK.md  BLOB_BOOTSTRAP_ADAPTERS.md  CACHE_PERFORMANCE_ANALYSIS.md  CLAUDE.md  CODE_REVIEW_AND_ISSUES.md  COORDINATOR_INTEGRATION_CHECKLIST.md  CUSTODIAN_SELECTION_IMPLEMENTATION.md  CUSTODIAN_SHEFA_IMPLEMENTATION_GUIDE.md  DUPLICATION_ANALYSIS_2025-12-07.md  Dockerfile  ELOHIM-MUTUAL-DELIVERY.md  ELOHIM_DATA_STORAGE_ARCHITECTURE.md  FINAL_DELIVERY_SUMMARY.md  FIX_GUIDE.md  GRACEFUL_DEGRADATION_DELIVERY_SUMMARY.md  GRACEFUL_DEGRADATION_QUICK_REFERENCE.md  HOLOCHAIN_CACHE_CORE_DEPLOYMENT_CHECKLIST.md  HOLOCHAIN_CACHE_CORE_IMPLEMENTATION.md  HOLOCHAIN_CACHE_CORE_QUICKSTART.md  HOLOCHAIN_CACHE_CORE_SUMMARY.md  HOLOCHAIN_CACHE_SEED_PODCAST_FLOW.md  HOLOCHAIN_GRACEFUL_DEGRADATION.md  HOLOCHAIN_GRACEFUL_DEGRADATION_INTEGRATION.md  HOLOCHAIN_ORCHESTRATOR_IMPLEMENTATION_PLAN.md  HUMAN_RELATIONSHIP_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE_COMPLETE.md  INTEGRATION_STATUS.md  Jenkinsfile  Jenkinsfile.bdd  Jenkinsfile.healing.backup  Jenkinsfile.protocol  LAMAD_SELF_HEALING_IMPLEMENTATION.md  PROTOCOL_PIPELINE.md  README.md  REVIEW_SUMMARY.md  RNA_SELF_HEALING_SUMMARY.md  (+21 more)
blob-cache-core/: Cargo.toml
blob-cache-core/src/: lib.rs
elohim/: Cargo.toml
elohim-node/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  devfile.yaml  elohim-node.toml  flake.nix  justfile
elohim-node/nix/: module.nix  package.nix
elohim-node/simulation/: README.md  docker-compose.yml  simulate.sh
elohim-node/simulation/configs/: family-a-node-1.toml  family-a-node-2.toml  family-b-node-1.toml  family-b-node-2.toml
elohim-node/src/: config.rs  main.rs
elohim-node/src/api/: grpc.rs  http.rs  mod.rs
elohim-node/src/cluster/: discovery.rs  leader.rs  membership.rs  mod.rs
elohim-node/src/dashboard/: discovery.rs  metrics.rs  mod.rs  routes.rs  setup.rs
elohim-node/src/network/: mod.rs  operator.rs  registration.rs  sync_state.rs
elohim-node/src/p2p/: mod.rs  nat.rs  protocols.rs  transport.rs
elohim-node/src/pod/: analyzer.rs  cli.rs  consensus.rs  decider.rs  executor.rs  mod.rs  models.rs  monitor.rs  protocol.rs
elohim-node/src/pod/actions/: cache.rs  config.rs  debug.rs  mod.rs  recovery.rs  storage.rs
elohim-node/src/storage/: blobs.rs  mod.rs  reach.rs
elohim-node/src/sync/: coordinator.rs  merge.rs  mod.rs  protocol.rs  stream.rs
elohim-node/src/update/: apply.rs  download.rs  manifest.rs  mod.rs
elohim-node/static/: dashboard.html  dashboard.js  setup.html  setup.js  style.css
elohim-node/tests/: config_test.rs  sync_engine_test.rs  transport_test.rs
elohim/constitution/: Cargo.toml
elohim/constitution/src/: conflict.rs  lib.rs  precedent.rs  prompt.rs  stack.rs  types.rs  verification.rs
elohim/constitution/src/layers/: bioregional.rs  community.rs  family.rs  global.rs  individual.rs  mod.rs  national.rs
elohim/eae/: Cargo.toml
elohim/eae/src/: config.rs  entity.rs  lib.rs  types.rs
elohim/eae/src/anomaly/: drift.rs  manipulation.rs  mod.rs  spiral.rs
elohim/eae/src/governance/: escalation.rs  layer_context.rs  mod.rs  subsidiarity.rs
elohim/eae/src/mace/: analyzer.rs  consensus.rs  decider.rs  executor.rs  mod.rs  monitor.rs
elohim/eae/src/precedent/: mod.rs  tracker.rs
elohim/elohim-agent/: Cargo.toml
elohim/elohim-agent/src/: audit.rs  lib.rs  request.rs  response.rs  service.rs  stream.rs  types.rs
elohim/elohim-agent/src/backend/: mock.rs  mod.rs  openai.rs  traits.rs
elohim/elohim-agent/src/capability/: mod.rs  registry.rs  types.rs
holochain/crates/doorway-client/: .gitignore  Cargo.toml
holochain/crates/doorway-client/src/: lib.rs  publish.rs  routes.rs
holochain/crates/elohim-sdk/: Cargo.toml
holochain/crates/elohim-sdk/src/: error.rs  lib.rs
holochain/crates/elohim-storage-client/: Cargo.toml  README.md
holochain/crates/elohim-storage-client/src/: client.rs  error.rs  lib.rs  sync.rs  types.rs
holochain/dna/lamad-spike/: Cargo.toml  FLEXIBLE_HEALING_INTEGRATION.md  README.md  build.sh  dna.yaml  flake.nix
holochain/dna/lamad-spike/workdir/: happ.yaml
holochain/doorway/: ARCHITECTURE.md  Cargo.toml  DID-FEDERATION.md  Dockerfile  FEDERATION.md  REACH_AWARE_CACHING.md  REACH_INTEGRATION_GUIDE.md
holochain/doorway/src/: config.rs  lib.rs  main.rs
holochain/doorway/src/auth/: jwt.rs  password.rs
holochain/doorway/src/cache/: keys.rs  mod.rs  store.rs  tiered.rs  write_buffer.rs
holochain/doorway/src/hosts/: mod.rs
holochain/doorway/src/nats/: mod.rs
holochain/doorway/src/orchestrator/: heartbeat.rs  mod.rs
holochain/doorway/src/projection/: app_auth.rs  document.rs  engine.rs  mod.rs  store.rs  subscriber.rs
holochain/doorway/src/proxy/: app.rs
holochain/elohim-storage/: CLAUDE.md  Cargo.toml  DIESEL_MIGRATION_SPRINT.md  Dockerfile  EDGE-ARCHITECTURE.md  IMPORT_PIPELINE_DEBUG.md  P2P-ARCHITECTURE.md  REACH.md  diesel.toml  justfile
holochain/elohim-storage/scripts/: generate-types.sh
holochain/elohim-storage/src/: blob_store.rs  cell_discovery.rs  cluster.rs  conductor_client.rs  config.rs  content_server.rs  debug_stream.rs  error.rs  getrandom_custom.rs  hc_client.rs  http.rs  identity.rs  import_api.rs  import_handler.rs  lib.rs  main.rs  metadata.rs  progress_hub.rs  progress_ws.rs  sharding.rs  signals.rs  sovereignty.rs  views.rs
holochain/elohim-storage/tests/: sync_integration.rs
holochain/elohim-wasm/: Cargo.toml
holochain/elohim-wasm/src/: lib.rs
holochain/holochain-cache-core/: Cargo.toml  README.md
holochain/holochain-cache-core/src/: lib.rs  resolution.rs  write_buffer.rs
holochain/rna/rust/: ARCHITECTURE.md  COMPLETE_GENERATOR_SUITE.md  CUSTOMIZATION_PATTERNS.md  Cargo.toml  GENERATOR_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  SCHEMA_ANALYZER_AND_GENERATOR.md  TESTING_GUIDE.md
steward/src-tauri/: Cargo.toml  tauri.conf.json
steward/src-tauri/icons/: .gitkeep  icon.icns
steward/src-tauri/src/: doorway.rs  identity.rs  lib.rs  main.rs  storage.rs
(+7999 files in other folders)
