[workspace]
resolver = "2"
members = [
    "constitution",
    "elohim-agent",
    "eae",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Elohim Protocol"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for LLM backends
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Crypto for hash verification
sha2 = "0.10"
hex = "0.4"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Streaming
tokio-stream = "0.1"
pin-project-lite = "0.2"

# TypeScript bindings
ts-rs = "10.0"

# Concurrent data structures
dashmap = "6.1"

# Internal crate dependencies
constitution = { path = "constitution" }
elohim-agent = { path = "elohim-agent" }
eae = { path = "eae" }
