[package]
name = "constitution"
description = "Constitutional stack management for Elohim Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# TypeScript type exports
ts-rs = { version = "10", optional = true }

[features]
default = []
typescript = ["ts-rs"]

[dev-dependencies]
tokio-test = "0.4"
