[package]
name = "doorway"
description = "WebSocket gateway for Elohim Holochain - 'Knock and it shall be opened'"
version = "0.1.0"
edition = "2021"
authors = ["Elohim Protocol"]
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "macros", "sync"] }
futures = "0.3"

# HTTP/WebSocket server
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
hyper-tungstenite = "0.15"
http-body-util = "0.1"
bytes = "1.10"
tokio-tungstenite = "0.24"
futures-util = "0.3"

# MessagePack for Holochain protocol
rmp-serde = "1.3"
rmpv = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NATS messaging
async-nats = "0.38"

# MongoDB
mongodb = "3.1"
bson = { version = "2.13", features = ["chrono-0_4"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
base64 = "0.22"

# Bootstrap service (agent discovery)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
dashmap = "6.1"
rand = "0.8"
hex = "0.4"

# Caching
sha2 = "0.10"

# Pin to version compatible with Rust 1.83 (base64ct 1.8.1 requires edition 2024)
base64ct = "=1.6.0"

# Shared types with DNAs
doorway-client = { path = "../crates/doorway-client" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "doorway"
path = "src/main.rs"

[[bin]]
name = "doorway-worker"
path = "src/bin/worker.rs"
