[package]
name = "elohim-storage"
version = "0.1.0"
edition = "2021"
description = "Blob storage sidecar for Elohim nodes - runs alongside Holochain conductor"
authors = ["Elohim Protocol"]
license = "AGPL-3.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "fs"] }

# HTTP server for shard API
hyper = { version = "1", features = ["full", "http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# Holochain client (for signals and provenance registration)
# TODO: Enable when integrating with conductor
# holochain_client = "0.6"

# Content-addressed storage
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"  # MessagePack for efficient P2P transfer

# Local database for metadata
sled = "0.34"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# Reed-Solomon encoding for erasure coding
reed-solomon-erasure = "6"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Optional: Compression for blobs
lz4_flex = { version = "0.11", optional = true }

[features]
default = []
compression = ["lz4_flex"]

[[bin]]
name = "elohim-storage"
path = "src/main.rs"
