[package]
name = "elohim-storage"
version = "0.1.0"
edition = "2021"
description = "Blob storage sidecar for Elohim nodes - runs alongside Holochain conductor"
authors = ["Elohim Protocol"]
license = "AGPL-3.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "fs"] }

# HTTP server for shard API
hyper = { version = "1", features = ["full", "http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# WebSocket for Holochain conductor communication
tokio-tungstenite = "0.24"
futures-util = "0.3"

# MessagePack for Holochain protocol
# Pin rmp/rmpv - newer versions require edition2024/Rust 1.85 (not stable in Rust 1.83)
rmp = "=0.8.14"
rmp-serde = "1.3"
rmpv = "=1.3.0"

# Async traits
async-trait = "0.1"

# Content-addressed storage
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local database for metadata
sled = "0.34"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# Reed-Solomon encoding for erasure coding
reed-solomon-erasure = "6"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# rust-libp2p - same P2P foundation as Holochain (via kitsune_p2p)
# https://github.com/libp2p/rust-libp2p
libp2p = { version = "0.54", features = [
    "tcp",              # TCP transport
    "noise",            # Noise protocol encryption
    "yamux",            # Stream multiplexing
    "kad",              # Kademlia DHT
    "request-response", # Shard transfer protocol
    "mdns",             # Local network discovery
    "relay",            # NAT traversal relay
    "dcutr",            # Direct Connection Upgrade through Relay
    "autonat",          # Automatic NAT detection
    "tokio",            # Async runtime integration
    "macros",           # NetworkBehaviour derive macro
    "identify",         # Protocol identification
    "ed25519",          # Ed25519 key support
    "serde",            # Serialization for PeerId etc
], optional = true }

# Futures for async traits (used by libp2p request-response)
futures = { version = "0.3", optional = true }

# Optional: Compression for blobs
lz4_flex = { version = "0.11", optional = true }

[features]
default = []
compression = ["lz4_flex"]
p2p = ["libp2p", "futures"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "elohim-storage"
path = "src/main.rs"
