[package]
name = "holochain-cache-core"
version = "0.1.0"
edition = "2021"
authors = ["Elohim Protocol"]
description = "High-performance O(log n) cache for Holochain/Elohim applications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
