[package]
name = "doorway-client"
description = "Caching traits and signals for Holochain DNAs to integrate with Doorway gateway"
version = "0.2.0"
edition = "2021"
authors = ["Elohim Protocol"]
license = "Apache-2.0"

[features]
default = []
# Enable for use in Holochain DNAs (adds hdk types)
hdk = ["dep:hdi"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdi = { version = "0.6", optional = true }
