[package]
name = "elohim-storage-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for elohim-storage sync API"
authors = ["Elohim Protocol"]
license = "AGPL-3.0"

[dependencies]
# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }

# CRDT sync
automerge = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Content identifiers
cid = "0.11"
hex = "0.4"
urlencoding = "2"

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
