[workspace]
members = [
    "zomes/content_store_integrity",
    "zomes/content_store",
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.7.0"
hdk = "=0.6.0"
holochain_serialized_bytes = "=0.0.56"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
doorway-client = { path = "../../crates/doorway-client" }
