[package]
name = "imagodei"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "imagodei"

[dependencies]
hdk.workspace = true
holochain_serialized_bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
imagodei_integrity = { path = "../imagodei_integrity" }
