[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "infrastructure"

[dependencies]
hdk.workspace = true
holochain_serialized_bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
infrastructure_integrity = { path = "../infrastructure_integrity" }
