[package]
name = "node_registry_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "0.4"
serde = "1"
serde_json = "1"
node_registry_integrity = { path = "../node_registry_integrity" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
